_sass/_layout.scss
@mixin clearfix {
  *zoom: 1;
  &:before, &:after {
    display: table;
    content: "";
  }
  &:after {
    clear: both;
  }
}

%clearfix {
  @include clearfix;
}

%row {
  max-width: $max-width;
  margin: 0 auto;
  @extend %clearfix;

  @media screen and (max-width: ($max-width + 2 * $spacing)) {
    padding: 0 $spacing;
    min-width: 100% !important;
  }
}

%half {
  width: 50%;
  float: right;

  @media screen and (min-width: ($breakpoint-one-column + 0.1rem)) {
    &:nth-child(2n+1) {
      clear: right;
      padding-right: $spacing;
    }
    &:nth-child(2n) {
      clear: left;
      padding-left: $spacing;
    }
  }

  @media screen and (max-width: $breakpoint-one-column) {
    width: 100%;
    float: none;
    @include clearfix;
  }
}

